# pallas-puzzles-2025

./: README.md  pyproject.toml
assets/: pups.txt
notebooks/: Pallas-Puzzles-Solutions.ipynb  Pallas-Puzzles.ipynb  utils.py
