[project]
name = "pallas-puzzles-2025"
version = "0.1.0"
description = "Puzzles for learning Pallas."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jax>=0.6.2; platform_system == 'Darwin'",
    "jax[cuda]>=0.6.2; platform_system != 'Darwin'",
    "jaxtyping>=0.3.2",
]
